<resources>
    <string name="app_name">EWriter</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>

    <string name="all">All</string>
    <string name="settings">Settings</string>


    <string name="about">About</string>
    <string name="item_weibo">Sina Weibo</string>
    <string name="item_weibo_author">\@熊胖胖x</string>
    <string name="item_weibo_author_url">"http://weibo.com/xiongzba"</string>
    <string name="title_setting">Setting</string>
    <string name="write_hint">Thanks for your support !</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="app_settings">Application Settings</string>
    <string name="first_screen">First Screen</string>
    <string name="first_screen_summary">open the editview if you check the box</string>
    <string name="rate_me">Rate me</string>
    <string name="rate_summary">Rate me if you like this app</string>
    <string name="no_market">Can\'t find market !</string>
    <string name="msg_close">Close</string>
</resources>
